fix: [RGOeX-978] Hide vjs controls and play button from vimeo videos to avoid overlapping with default Vimeo controls

--- a/video_xblock/static/css/videojs.css
+++ b/video_xblock/static/css/videojs.css
@@ -481,3 +481,8 @@ body {
     height: 100% !important;
     top: 0 !important;
 }
+
+.video-js-vimeo .vjs-big-play-button,
+.video-js-vimeo .vjs-control-bar {
+    display: none !important;
+}
